Revert "Attempted to fix page-break printout problem on Safari"
This reverts commit 959d72334b694ddb85aec03558428e3d4ea8c4bb.

--- a/css/index.css
+++ b/css/index.css
@@ -1138,8 +1138,7 @@ section {
         box-shadow: none;
         break-inside: avoid;
         display: inline-table; /* Make element unbreakable for Safari */
-        background-color:aliceblue;
-        /* box-shadow: var(--box-shadow-tiny-light-mode); */
+        box-shadow: var(--box-shadow-tiny-light-mode);
     }
 
     .card:hover {
